change the color of text

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h2>CatPhotoApp</h2>
+  <h2 style="color: red;">CatPhotoApp</h2>
   <main>
     <p>Click here to view more <a href="#">cat photos</a>.</p>
   
