--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      h2 {
+        color: red;
+      }
+    </style>
 </head>
 <body>
-  <h2 style="color: red;">CatPhotoApp</h2>
+  <h2>CatPhotoApp</h2>
   <main>
     <p>Click here to view more <a href="#">cat photos</a>.</p>
   
