--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      h2 {
-        color: blue;
+      .blue-text {
+        color: red;
       }
     </style>
 </head>
 <body>
-  <h2>CatPhotoApp</h2>
+  <h2 class="blue-text">CatPhotoApp</h2>
   <main>
     <p>Click here to view more <a href="#">cat photos</a>.</p>
   
