--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      .blue-text {
+      .red-text {
         color: red;
       }
     </style>
 </head>
 <body>
-  <h2 class="blue-text">CatPhotoApp</h2>
+  <h2 class="red-text">CatPhotoApp</h2>
   <main>
-    <p>Click here to view more <a href="#">cat photos</a>.</p>
+    <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
     <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
   
