--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <title>Document</title>
     <style>
       .red-text {
@@ -12,7 +13,10 @@
 
       p {
         font-size: 16px;
-        font-family: monospace;
+        font-family: Lobster;
+      }
+      h2 {
+        font-family: Lobster;
       }
     </style>
 </head>
