--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -10,6 +10,9 @@
       .red-text {
         color: red;
       }
+      .smaller-image {
+        width: 100px;
+      }
 
       p {
         font-size: 16px;
@@ -25,7 +28,7 @@
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
-    <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+    <a href="#"><img class='smaller-image' src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
   
     <div>
       <p>Things cats love:</p>
