--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -13,7 +13,11 @@
       .smaller-image {
         width: 100px;
       }
-
+      .thick-green-border {
+        border-color: green;
+        border-width: 10px;
+        border-style: solid;
+    }
       p {
         font-size: 16px;
         font-family: Lobster;
@@ -28,7 +32,7 @@
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
-    <a href="#"><img class='smaller-image' src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+    <a href="#"><img class='smaller-image thick-green-border' src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
   
     <div>
       <p>Things cats love:</p>
