--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -17,6 +17,7 @@
         border-color: green;
         border-width: 10px;
         border-style: solid;
+        border-radius: 10px;
     }
       p {
         font-size: 16px;
