--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -19,6 +19,10 @@
         border-style: solid;
         border-radius: 50%;
     }
+      .silver-background {
+        background-color: silver;
+      }
+      
       p {
         font-size: 16px;
         font-family: Lobster;
@@ -35,7 +39,7 @@
   
     <a href="#"><img class='smaller-image thick-green-border' src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
   
-    <div>
+    <div class="silver-background">
       <p>Things cats love:</p>
       <ul>
         <li>cat nip</li>
