--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -23,6 +23,9 @@
         background-color: silver;
       }
       
+      #cat-photo-form {
+        background-color: green;
+      }
       p {
         font-size: 16px;
         font-family: Lobster;
