--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -62,6 +62,10 @@
       .blue-box {
         background-color: blue;
         color: #fff;
+        padding-top: 40px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+        padding-left: 40px;
       }
     </style>
 </head>
