Add Different Margins to Each Side of an Element

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -66,6 +66,10 @@
         padding-right: 20px;
         padding-bottom: 20px;
         padding-left: 40px;
+        margin-top: 40px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        margin-left: 40px;
       }
     </style>
 </head>
