Clockwise Notation to Specify the Padding of an Element

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -62,10 +62,7 @@
       .blue-box {
         background-color: blue;
         color: #fff;
-        padding-top: 40px;
-        padding-right: 20px;
-        padding-bottom: 20px;
-        padding-left: 40px;
+        padding: 40px 20px 10px 40px;
         margin-top: 40px;
         margin-right: 20px;
         margin-bottom: 20px;
