Clockwise Notation to Specify the Margin of an Element

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -63,10 +63,7 @@
         background-color: blue;
         color: #fff;
         padding: 40px 20px 20px 40px;
-        margin-top: 40px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        margin-left: 40px;
+        margin: 40px 20px 20px 40px;
       }
     </style>
 </head>
