Attribute Selectors to Style Elements

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -65,6 +65,10 @@
         padding: 40px 20px 20px 40px;
         margin: 40px 20px 20px 40px;
       }
+      [type='checkbox'] {
+        margin-top: 10px;
+        margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
