--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -52,11 +52,8 @@
     
       .red-box {
         background-color: crimson;
-        color: #fff;
-        padding-top: 40px;
-        padding-right: 20px;
-        padding-bottom: 20px;
-        padding-left: 40px;
+        margin: 20px 40px 20px 40px;
+        padding:1.5em;
       }
     
       .blue-box {
@@ -65,6 +62,7 @@
         padding: 40px 20px 20px 40px;
         margin: 40px 20px 20px 40px;
       }
+
       [type='checkbox'] {
         margin-top: 10px;
         margin-bottom: 15px;
