Style the HTML Body Element

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -7,6 +7,9 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">-->
     <title>Document</title>
     <style>
+      body {
+        background-color: black;
+      }
       .red-text {
         color: red;
       }
