Inherit Styles from the Body Element

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -9,7 +9,10 @@
     <style>
       body {
         background-color: black;
+        color:green;
+        font-family: monospace;
       }
+
       .red-text {
         color: red;
       }
@@ -73,6 +76,7 @@
     </style>
 </head>
 <body>
+  <h1>Hello World</h1>
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
