--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -12,6 +12,9 @@
         color:green;
         font-family: monospace;
       }
+      .pink-text{
+        color: pink;
+      }
 
       .red-text {
         color: red;
@@ -76,7 +79,7 @@
     </style>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1 class='pink-text'>Hello World!</h1>
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
