Override Styles in Subsequent CSS

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -19,6 +19,9 @@
       .red-text {
         color: red;
       }
+      .blue-text{
+        color: blue;
+      }
       .smaller-image {
         width: 100px;
       }
@@ -79,7 +82,7 @@
     </style>
 </head>
 <body>
-  <h1 class='pink-text'>Hello World!</h1>
+  <h1 class="pink-text blue-text">Hello 
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
