Override Class Declarations with Inline Styles

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -87,7 +87,7 @@
     </style>
 </head>
 <body>
-  <h1 id="orange-text" class="pink-text blue-text">Hello 
+  <h1 id="orange-text" class="pink-text blue-text" style="color: white;" >Hello 
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
