--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -13,7 +13,7 @@
         font-family: monospace;
       }
       .pink-text{
-        color: pink;
+        color: pink !important;
       }
 
       .red-text {
