Hex Code to Mix Colors

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -16,15 +16,21 @@
         color: pink !important;
       }
 
-      .red-text {
-        color: red;
-      }
       .blue-text{
         color: blue;
       }
 
-      #orange-text {
-        color: orange;
+      .red-text {
+        color: FF0000;
+      }
+      .green-text {
+        color: #00FF00;
+      }
+      .dodger-blue-text {
+        color: #1E90FF;
+      }
+      .orange-text {
+        color: #FFA500;
       }
 
       .smaller-image {
@@ -88,6 +94,13 @@
 </head>
 <body>
   <h1 id="orange-text" class="pink-text blue-text" style="color: white;" >Hello 
+    <h1 class="red-text">I am red!</h1>
+
+    <h1 class="green-text">I am green!</h1>
+
+    <h1 class="dodger-blue-text">I am dodger blue!</h1>
+
+    <h1 class="orange-text">I am orange!</h1>
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
