Abbreviated Hex Code

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -21,10 +21,16 @@
       }
 
       .red-text {
-        color: FF0000;
+        color: #F00;
+      }
+      .fuchsia-text {
+        color: #F0F;
+      }
+      .cyan-text {
+        color: #0FF;
       }
       .green-text {
-        color: #00FF00;
+        color: #0F0;
       }
       .dodger-blue-text {
         color: #1E90FF;
@@ -32,7 +38,7 @@
       .orange-text {
         color: #FFA500;
       }
-
+      
       .smaller-image {
         width: 100px;
       }
