--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
       body {
-        background-color: #000000;
+        background-color: rgb(0, 0, 0);;
         color:green;
         font-family: monospace;
       }
