RGB to Mix Colors

--- a/ResponsiveWebDesign/Module1/index.html
+++ b/ResponsiveWebDesign/Module1/index.html
@@ -17,7 +17,7 @@
       }
 
       .blue-text{
-        color: blue;
+        color: rgb(0, 0, 255);
       }
 
       .red-text {
@@ -38,7 +38,12 @@
       .orange-text {
         color: #FFA500;
       }
-      
+      .orchid-text {
+        color: rgb(218, 112, 214);
+      }
+      .sienna-text {
+        color: rgb(160, 82, 45);
+      }
       .smaller-image {
         width: 100px;
       }
