Variables to change several elements at once

--- a/ResponsiveWebDesign/Module2/index.html
+++ b/ResponsiveWebDesign/Module2/index.html
@@ -9,9 +9,9 @@
         .penguin {
       
           /* Only change code below this line */
-          --penguin-skin: black;
-          --penguin-belly: gray;
-          --penguin-beak: yellow;
+          --penguin-skin: gray;
+            --penguin-belly: white;
+            --penguin-beak: orange;
           /* Only change code above this line */
       
           position: relative;
