custom CSS Variable

--- a/ResponsiveWebDesign/Module2/index.html
+++ b/ResponsiveWebDesign/Module2/index.html
@@ -12,6 +12,7 @@
           --penguin-skin: gray;
             --penguin-belly: white;
             --penguin-beak: orange;
+            --penguin-skin:gray;
           /* Only change code above this line */
       
           position: relative;
