Attach a Fallback value to a CSS Variable

--- a/ResponsiveWebDesign/Module2/index.html
+++ b/ResponsiveWebDesign/Module2/index.html
@@ -24,7 +24,7 @@
         .penguin-top {
           top: 10%;
           left: 25%;
-          background: var(--penguin-skin, gray);
+          background: var(--penguin-skin, black);
           width: 50%;
           height: 45%;
           border-radius: 70% 70% 60% 60%;
@@ -33,7 +33,7 @@
         .penguin-bottom {
           top: 40%;
           left: 23.5%;
-          background: var(--penguin-skin, gray);
+          background: var(--penguin-skin,black);
           width: 53%;
           height: 45%;
           border-radius: 70% 70% 100% 100%;
