Improve Compatibility with Browser Fallbacks

--- a/ResponsiveWebDesign/Module2/index.html
+++ b/ResponsiveWebDesign/Module2/index.html
@@ -24,6 +24,7 @@
         .penguin-top {
           top: 10%;
           left: 25%;
+          background:black;
           background: var(--penguin-skin, black);
           width: 50%;
           height: 45%;
