Inherit CSS Variables

--- a/ResponsiveWebDesign/Module2/index.html
+++ b/ResponsiveWebDesign/Module2/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        :root {
+           --penguin-belly:pink;
+           }
         .penguin {
             --penguin-skin: gray;
             --penguin-belly: white;
