Change a variable for a specific area

--- a/ResponsiveWebDesign/Module2/index.html
+++ b/ResponsiveWebDesign/Module2/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <style>
         :root {
-           --penguin-belly:pink;
+            --penguin-skin: gray;
+            --penguin-belly: pink;
+            --penguin-beak: orange;
            }
         .penguin {
             --penguin-skin: gray;
