--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -17,6 +17,7 @@
       
         }
         .fullCard {
+          width: 245px;
           border: 1px solid #ccc;
           border-radius: 5px;
           margin: 10px 5px;
