Adjust the Height of an Element Using the height Property

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -8,6 +8,7 @@
     <style>
         h4 {
             text-align: center;
+            height: 25px;
           }
           p {
             text-align: justify; 
