Use the strong Tag to Make Text Bold

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -35,7 +35,7 @@
         <div class="cardContent">
           <div class="cardText">
             <h4>Google</h4>
-            <p>Google was founded by Larry Page and Sergey Brin while they were Ph.D. students at Stanford University.</p>
+            <p>Google was founded by Larry Page and Sergey Brin while they were Ph.D. students at <strong>Stanford University</strong>.</p>
           </div>
           <div class="cardLinks">
             <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a>
