--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -34,7 +34,7 @@
     <div class="fullCard">
         <div class="cardContent">
           <div class="cardText">
-            <h4>Google</h4>
+            <h4><s>Google</s> Alphabet</h4>
             <p><em>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</em></p>
           </div>
           <div class="cardLinks">
