Adjust the background-color Property of Text

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h4 {
-            text-align: center;
-            height: 25px;
-          }
+      h4 {
+        text-align: center;
+        background-color: rgba(45, 45, 45, 0.1);
+        padding:10px;
+      }
           p {
             text-align: justify; 
           }
