--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -10,6 +10,7 @@
         text-align: center;
         background-color: rgba(45, 45, 45, 0.1);
         padding:10px;
+        font-size:27px;
       }
           p {
             text-align: justify; 
