box-shadow to a Card-like Element

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -29,11 +29,14 @@
         .cardContent {
           padding: 10px;
         }
+        #thumbnail{
+          box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        }
     </style>
 </head>
 
 <body>
-    <div class="fullCard">
+    <div class="fullCard" id="thumbnail">
         <div class="cardContent">
           <div class="cardText">
             <h4><s>Google</s> Alphabet</h4>
