--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -29,8 +29,14 @@
         .cardContent {
           padding: 10px;
         }
+        .cardText {
+          margin-bottom: 30px;
+        }
         #thumbnail{
           box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        }
+        .links{
+          opacity:0.7;
         }
     </style>
 </head>
