--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -11,6 +11,7 @@
         background-color: rgba(45, 45, 45, 0.1);
         padding:10px;
         font-size:27px;
+        text-transform:uppercase;
       }
           p {
             text-align: justify; 
@@ -35,8 +36,10 @@
         #thumbnail{
           box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         }
-        .links{
-          opacity:0.7;
+        .links {
+          text-align: left;
+          color: black;
+          opacity: 0.7;
         }
     </style>
 </head>
