font-size for Multiple Heading Elements

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -13,6 +13,21 @@
         font-size:27px;
         text-transform:uppercase;
       }
+      h1{
+        font-size:68px; 
+       }
+       h2{
+        font-size:52px; 
+       }
+       h3{
+        font-size:40px; 
+       }
+       h5{
+        font-size:21px; 
+       }
+       h6{
+        font-size:14px; 
+       }
           p {
             text-align: justify; 
           }
@@ -48,6 +63,11 @@
     <div class="fullCard" id="thumbnail">
         <div class="cardContent">
           <div class="cardText">
+            <h1>This is h1 text</h1>
+            <h2>This is h2 text</h2>
+            <h3>This is h3 text</h3>
+            <h5>This is h5 text</h5>
+            <h6>This is h6 text</h6>
             <h4><s>Google</s> Alphabet</h4>
             <hr>
             <p><em>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</em></p>
