font-weight for Multiple Heading Elements

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -15,18 +15,23 @@
       }
       h1{
         font-size:68px; 
+        font-weight: 800;
        }
        h2{
         font-size:52px; 
+        font-weight: 600;
        }
        h3{
         font-size:40px; 
+        font-weight: 500;
        }
        h5{
         font-size:21px; 
+        font-weight: 300;
        }
        h6{
         font-size:14px; 
+        font-weight: 200;
        }
           p {
             text-align: justify; 
