--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -35,6 +35,7 @@
        }
           p {
             text-align: justify; 
+            font-size: 16px;
           }
         .links {
           margin-right: 20px;
@@ -76,6 +77,10 @@
             <h4><s>Google</s> Alphabet</h4>
             <hr>
             <p><em>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</em></p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+
           </div>
           <div class="cardLinks">
             <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a>
