--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -36,6 +36,7 @@
           p {
             text-align: justify; 
             font-size: 16px;
+            line-height:25px;
           }
         .links {
           margin-right: 20px;
