Adjust the Hover State of an Anchor Tag

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -63,6 +63,13 @@
           color: black;
           opacity: 0.7;
         }
+        a {
+          color: #000;
+        }
+        a:hover {
+          color: blue;
+        }
+      
     </style>
 </head>
 
@@ -86,6 +93,7 @@
           <div class="cardLinks">
             <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a>
             <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank" class="links">Sergey Brin</a>
+            <a href="https://freecatphotoapp.com/" target="_blank">CatPhotoApp</a>
           </div>
         </div>
       </div> 
