Change an Element's Relative Position

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -20,6 +20,9 @@
        h2{
         font-size:52px; 
         font-weight: 600;
+        position: relative;
+        top: 15px;
+
        }
        h3{
         font-size:40px; 
