Move a Relatively Positioned Element with CSS Offsets

--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -21,7 +21,9 @@
         font-size:52px; 
         font-weight: 600;
         position: relative;
-        top: 15px;
+        left:15px;
+        bottom:10px;
+
 
        }
        h3{
