--- a/ResponsiveWebDesign/AppliedVisualDesign/index.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/index.html
@@ -74,7 +74,12 @@
         a:hover {
           color: blue;
         }
+        #searchbar {
+          position: absolute;
+          left:50px;
+          top:50px;
       
+        }
     </style>
 </head>
 
@@ -102,5 +107,15 @@
           </div>
         </div>
       </div> 
+      <div>
+        <h1>Welcome!</h1>
+        <section>
+          <form id="searchbar">
+            <label for="search">Search:</label>
+            <input type="search" id="search" name="search">
+            <input type="submit" name="submit" value="Go!">
+          </form>
+        </section>
+      </div>
 </body>
 </html>
