--- a/ResponsiveWebDesign/AppliedVisualDesign/color.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/color.html
@@ -10,10 +10,10 @@
           background-color: #FFFFFF;
         }
         .blue {
-          background-color: #000000;
-        }
+            background-color: blue;
+          }
         .yellow {
-          background-color: #000000;
+            background-color: yellow;
         }
         div {
           display: inline-block;
