--- a/ResponsiveWebDesign/AppliedVisualDesign/color.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/color.html
@@ -15,6 +15,17 @@
         .yellow {
             background-color: yellow;
         }
+        .orange {
+            background-color: #FF7F00;
+          }
+        
+          .cyan {
+            background-color: #00FFFF;
+          }
+        
+          .raspberry {
+            background-color: #FF007F;
+          }
         div {
           display: inline-block;
           height: 100px;
@@ -25,5 +36,8 @@
 <body>
     <div class="blue"></div>
     <div class="yellow"></div>
+    <div class="orange"></div>
+    <div class="cyan"></div>
+    <div class="raspberry"></div>
 </body>
 </html>
