--- a/ResponsiveWebDesign/AppliedVisualDesign/colorComplementary.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/colorComplementary.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+          background-color: white;
+        }
+        header {
+          background-color: black;
+          color: white;
+          padding: 0.25em;
+        }
+        h2 {
+          color: black;
+        }
+        button {
+          background-color: white;
+        }
+        footer {
+          background-color: black;
+          color: white;
+          padding: 0.5em;
+        }
+      </style>
 </head>
 <body>
-    
+    <header>
+        <h1>Cooking with FCC!</h1>
+      </header>
+      <main>
+        <article>
+          <h2>Machine Learning in the Kitchen</h2>
+          <p>Join this two day workshop that walks through how to implement cutting-edge snack-getting algorithms with a command line interface. Coding usually involves writing exact instructions, but sometimes you need your computer to execute flexible commands, like <code>fetch Pringles</code>.</p>
+          <button>Sign Up</button>
+        </article>
+        <article>
+          <h2>Bisection Vegetable Chopping</h2>
+          <p>This week-long retreat will level-up your coding ninja skills to actual ninja skills. No longer is the humble bisection search limited to sorted arrays or coding interview questions, applying its concepts in the kitchen will have you chopping carrots in O(log n) time before you know it.</p>
+          <button>Sign Up</button>
+        </article>
+      </main>
+      <br>
+      <footer>&copy; 2018 FCC Kitchen</footer>
 </body>
 </html>
