Adjust the Color of Various Elements to Complementary Colors

--- a/ResponsiveWebDesign/AppliedVisualDesign/colorComplementary.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/colorComplementary.html
@@ -7,24 +7,24 @@
     <title>Document</title>
     <style>
         body {
-          background-color: white;
-        }
-        header {
-          background-color: black;
-          color: white;
-          padding: 0.25em;
-        }
-        h2 {
-          color: black;
-        }
-        button {
-          background-color: white;
-        }
-        footer {
-          background-color: black;
-          color: white;
-          padding: 0.5em;
-        }
+            background-color: white;
+          }
+          header {
+            background-color: #09A7A1;
+            color: white;
+            padding: 0.25em;
+          }
+          h2 {
+            color: #09A7A1;
+          }
+          button {
+            background-color: #FF790E;
+          }
+          footer {
+            background-color: #09A7A1;
+            color: white;
+            padding: 0.5em;
+          }
       </style>
 </head>
 <body>
