Gradual CSS Linear Gradient

--- a/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
@@ -34,6 +34,13 @@
           text-decoration: none;
           color: inherit;
         }
+        div {
+          border-radius: 20px;
+          width: 70%;
+          height: 400px;
+          margin: 50px auto;  
+          background: linear-gradient(35deg, #CCFFFF, #FFCCCC, rgb(204, 204, 255));}
+        
       </style>
 </head>
 <body>
@@ -47,5 +54,6 @@
           </ul>
         </nav>
       </header>
+      <div></div>
 </body>
 </html>
