Chance Gradual CSS Linear Gradient

--- a/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
@@ -39,7 +39,8 @@
           width: 70%;
           height: 400px;
           margin: 50px auto;  
-          background: linear-gradient(35deg, #CCFFFF, #FFCCCC, rgb(204, 204, 255));}
+          background: linear-gradient(35deg, #ccffff, #ffcccc); 
+        }
         
       </style>
 </head>
