repeating-linear-gradient

--- a/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
@@ -41,7 +41,19 @@
           margin: 50px auto;  
           background: linear-gradient(35deg, #ccffff, #ffcccc); 
         }
-        
+        div .gradiente2{
+          border-radius: 20px;
+          width: 70%;
+          height: 400px;
+          margin:  50 auto;
+          background: repeating-linear-gradient(
+            45deg,
+            yellow 0px,
+            yellow 40px,
+            black 40px,
+            black 80px
+          );
+        }
       </style>
 </head>
 <body>
@@ -56,5 +68,6 @@
         </nav>
       </header>
       <div></div>
+      <div id="gradiente2"></div>
 </body>
 </html>
