Create Texture by Adding a Subtle Pattern as a Background Image

--- a/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/colorTone.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+          background:url('https://cdn-media-1.freecodecamp.org/imgr/MJAkxbh.png');
+        }
         header {
           background-color: hsl(180, 90%, 35%);
           color: #FFFFFF;
