Transform scale Property to Scale an Element on Hover

--- a/ResponsiveWebDesign/AppliedVisualDesign/Transform.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/Transform.html
@@ -25,12 +25,14 @@
             left: 65%;
             transform: scale(1.5);
           }
-      
+          #ball2:hover {
+            transform: scale(2.1);
+          }
       
       </style>
 </head>
 <body>
     <div class="ball" id= "ball1"></div>
-<div class="ball" id= "ball2"></div>
+    <div class="ball" id= "ball2"></div>
 </body>
 </html>
