--- a/ResponsiveWebDesign/AppliedVisualDesign/TransformProperty.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/TransformProperty.html
@@ -20,9 +20,24 @@
       background-color: blue;
        transform: skewX(24deg);
     }
+    .center {
+      position: absolute;
+      margin: auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: 100px;
+      height: 100px;
+      background-color: transparent;
+      border-radius: 50%;
+      box-shadow:25px 10px 0 blue;
+      blur-radius:0;
+    }
   </style>
 <body>
     <div id="top"></div>
 <div id="bottom"></div>
+<div class="center"></div>
 </body>
 </html>
