Modify Fill Mode of an Animation

--- a/ResponsiveWebDesign/AppliedVisualDesign/animationKeyframes3.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/animationKeyframes3.html
@@ -21,6 +21,7 @@
    @keyframes background-color {
       100% {
         background-color: #4791d0;
+        animation-fill-mode: forwards;
       }
     }
   
