--- a/ResponsiveWebDesign/AppliedVisualDesign/animationFading.html
+++ b/ResponsiveWebDesign/AppliedVisualDesign/animationFading.html
@@ -22,6 +22,8 @@
       );
       animation-name: fade;
       animation-duration: 3s;
+      animation-iteration-count: 4;/*animation-iteration-count: infinite; */
+      
     }
   
     @keyframes fade {
