--- a/ResponsiveWebDesign/AppliedAccessibility/ImageText.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/ImageText.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./Images/freecodecampLogo.png" alt="freecode camp">
+    <h1>Deep Thoughts with Master Camper Cat</h1>
+<article>
+  <h2>Defeating your Foe: the Red Dot is Ours!</h2>
+  <p>To Come...</p>
+</article>
+
+<img src="samuraiSwords.jpeg">
+
+<article>
+  <h2>Is Chuck Norris a Cat Person?</h2>
+  <p>To Come...</p>
+</article>
 </body>
 </html>
