--- a/ResponsiveWebDesign/AppliedAccessibility/ImageText.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/ImageText.html
@@ -7,7 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Deep Thoughts with Master Camper Cat</h1>
+    <h1>How to Become a Ninja</h1>
+<main>
+  <h2>Learn the Art of Moving Stealthily</h2>
+  <h3>How to Hide in Plain Sight</h3>
+  <h3>How to Climb a Wall</h3>
+
+  <h2>Learn the Art of Battle</h2>
+  <h3>How to Strengthen your Body</h3>
+  <h3>How to Fight like a Ninja</h3>
+
+  <h2>Learn the Art of Camper CatLiving with Honor</h2>
+  <h3>How to Breathe Properly</h3>
+  <h3>How to Simplify your Life</h3>
+</main>
 <article>
   <h2>Defeating your Foe: the Red Dot is Ours!</h2>
   <p>To Come...</p>
