--- a/ResponsiveWebDesign/AppliedAccessibility/index.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/index.html
@@ -7,32 +7,28 @@
     <title>Document</title>
 </head>
 <body>
+
     <header>
-        <h1>Weapons of the Ninja</h1>
-      </header>
-      <h1>Deep Thoughts with Master Camper Cat</h1>
-<main>
-  <article>
-    <h2>The Garfield Files: Lasagna as Training Fuel?</h2>
-    <p>The internet is littered with varying opinions on nutritional paradigms, from catnip paleo to hairball cleanses. But let's turn our attention to an often overlooked fitness fuel, and examine the protein-carb-NOM trifecta that is lasagna...</p>
-  </article>
-
-  <img src="samuraiSwords.jpeg" alt="">
-
-  <article>
-    <h2>Defeating your Foe: the Red Dot is Ours!</h2>
-    <p>Felines the world over have been waging war on the most persistent of foes. This red nemesis combines both cunning stealth and lightning speed. But chin up, fellow fighters, our time for victory may soon be near...</p>
-  </article>
-
-  <img src="samuraiSwords.jpeg" alt="">
-
-  <article>
-    <h2>Is Chuck Norris a Cat Person?</h2>
-    <p>Chuck Norris is widely regarded as the premier martial artist on the planet, and it's a complete coincidence anyone who disagrees with this fact mysteriously disappears soon after. But the real question is, is he a cat person?...</p>
-  </article>
-</main>
-      
-      
-      <footer></footer>
-</body>
+      <h1>Training with Camper Cat</h1>
+    </header>
+  
+  
+    <main>
+      <section id="stealth">
+        <h2>Stealth &amp; Agility Training</h2>
+        <article><h3>Climb foliage quickly using a minimum spanning tree approach</h3></article>
+        <article><h3>No training is NP-complete without parkour</h3></article>
+      </section>
+      <section id="combat">
+        <h2>Combat Training</h2>
+        <article><h3>Dispatch multiple enemies with multithreaded tactics</h3></article>
+        <article><h3>Goodbye world: 5 proven ways to knock out an opponent</h3></article>
+      </section>
+      <section id="weapons">
+        <h2>Weapons Training</h2>
+        <article><h3>Swords: the best tool to literally divide and conquer</h3></article>
+        <article><h3>Breadth-first or depth-first in multi-weapon training?</h3></article>
+      </section>
+    </main>
+  </body>
 </html>
