--- a/ResponsiveWebDesign/AppliedAccessibility/index.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/index.html
@@ -10,9 +10,15 @@
 
     <header>
       <h1>Training with Camper Cat</h1>
-    </header>
-  
-  
+    
+    <nav>
+      <ul>
+        <li><a href="#stealth">Stealth &amp; Agility</a></li>
+        <li><a href="#combat">Combat</a></li>
+        <li><a href="#weapons">Weapons</a></li>
+      </ul>
+    </nav>
+  </header>
     <main>
       <section id="stealth">
         <h2>Stealth &amp; Agility Training</h2>
