--- a/ResponsiveWebDesign/AppliedAccessibility/index.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/index.html
@@ -36,5 +36,6 @@
         <article><h3>Breadth-first or depth-first in multi-weapon training?</h3></article>
       </section>
     </main>
+    <footer>&copy; 2018 Camper Cat</footer>
   </body>
 </html>
