--- a/ResponsiveWebDesign/AppliedAccessibility/index.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/index.html
@@ -35,6 +35,11 @@
         <article><h3>Swords: the best tool to literally divide and conquer</h3></article>
         <article><h3>Breadth-first or depth-first in multi-weapon training?</h3></article>
       </section>
+
+      <audio id="meowClip" controls>
+        <source src="https://s3.amazonaws.com/freecodecamp/screen-reader.mp3" type="audio/mpeg">
+      </audio>
+      
     </main>
     <footer>&copy; 2018 Camper Cat</footer>
   </body>
