Chart Accessibility with the figure Element

--- a/ResponsiveWebDesign/AppliedAccessibility/index.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/index.html
@@ -39,7 +39,15 @@
       <audio id="meowClip" controls>
         <source src="https://s3.amazonaws.com/freecodecamp/screen-reader.mp3" type="audio/mpeg">
       </audio>
-      
+      <section>
+        <figure>
+          <img src="images/freecodecampLogo.png" alt="Photo of Camper Cat executing a roundhouse kick">
+          <br>
+          <figcaption>
+            Master Camper Cat demonstrates proper form of a roundhouse kick.
+          </figcaption>
+        </figure>
+      </section>
     </main>
     <footer>&copy; 2018 Camper Cat</footer>
   </body>
