--- a/ResponsiveWebDesign/AppliedAccessibility/Accessibility.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/Accessibility.html
@@ -55,6 +55,16 @@
             that anyone who disagrees with this fact mysteriously disappears soon after. But the real question is, is he
             a cat person?...</p>
     </article>
+    <section>
+        <h2>Mortal Kombat Tournament Survey</h2>
+        <form>
+          <p>Tell us the best date for the competition</p>
+          <label for="pickdate">Preferred Date:</label>
+  <input type="date" id="pickdate" name="date">
+  
+          <input type="submit" name="submit" value="Submit">
+        </form>
+      </section>
     <footer>&copy; 2018 Camper Cat</footer>
 </body>
 
