--- a/ResponsiveWebDesign/AppliedAccessibility/Readability.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/Readability.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+          color: #D3D3D3;
+          background-color: #FFF;
+        }
+        </style>
 </head>
 <body>
     
