--- a/ResponsiveWebDesign/AppliedAccessibility/Colorblindness.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/Colorblindness.html
@@ -10,12 +10,19 @@
             color: hsl(0, 55%, 15%);
             background-color: hsl(120, 25%, 55%);
           }
+          button {
+            color: #003366;
+            background-color: #FFFF33;
+            font-size: 14px;
+            padding: 10px;
+          }
         </style>
 </head>
 <body>
     <header>
       <h1>Deep Thoughts with Master Camper Cat</h1>
     </header>
+    <button>Delete Internet</button>
     <article>
       <h2>A Word on the Recent Catnip Doping Scandal</h2>
       <p>The influence that catnip has on feline behavior is well-documented, and its use as an herbal supplement in competitive ninja circles remains controversial. Once again, the debate to ban the substance is brought to the public's attention after the high-profile win of Kittytron, a long-time proponent and user of the green stuff, at the Claw of Fury tournament.</p>
