--- a/ResponsiveWebDesign/AppliedAccessibility/Accesskey.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/Accesskey.html
@@ -13,7 +13,7 @@
     <article>
   
   
-      <h2><a id="first" href="#">The Garfield Files: Lasagna as Training Fuel?</a></h2>
+      <h2><a accesskey="g"id="first" href="#">The Garfield Files: Lasagna as Training Fuel?</a></h2>
   
   
       <p>The internet is littered with varying opinions on nutritional paradigms, from catnip paleo to hairball cleanses. But let's turn our attention to an often overlooked fitness fuel, and examine the protein-carb-NOM trifecta that is lasagna...</p>
@@ -21,7 +21,7 @@
     <article>
   
   
-      <h2><a id="second" href="#">Is Chuck Norris a Cat Person?</a></h2>
+      <h2><a accesskey="c"id="second" href="#">Is Chuck Norris a Cat Person?</a></h2>
   
   
       <p>Chuck Norris is widely regarded as the premier martial artist on the planet, and it's a complete coincidence that anyone who disagrees with this fact mysteriously disappears soon after. But the real question is, is he a cat person?...</p>
