--- a/ResponsiveWebDesign/AppliedAccessibility/Tabindex.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/Tabindex.html
@@ -19,7 +19,7 @@
       <form>
   
   
-        <p>Instructions: Fill in ALL your information then click <b>Submit</b></p>
+        <p tabindex="0">Instructions: Fill in ALL your information then click <b>Submit</b></p>
   
   
         <label for="username">Username:</label>
