tabindex to Specify the Order of Keyboard Focus for Several Elements2

--- a/ResponsiveWebDesign/AppliedAccessibility/TabIndex2.html
+++ b/ResponsiveWebDesign/AppliedAccessibility/TabIndex2.html
@@ -35,8 +35,8 @@
       <label for="search">Search:</label>
   
   
-      <input type="search" name="search" id="search">
-      <input type="submit" name="submit" value="Submit" id="submit">
+      <input tabindex="1" type="search" name="search" id="search">
+    <input tabindex="2"type="submit" name="submit" value="Submit" id="submit">
   
   
     </form>
