--- a/ResponsiveWebDesign/DesignPrinciples/index.html
+++ b/ResponsiveWebDesign/DesignPrinciples/index.html
@@ -11,9 +11,11 @@
             font-size: 20px;
         }
 
-        /* Only change code below this line */
-
-        /* Only change code above this line */
+        @media (max-height: 800px){ 
+            p {
+            font-size: 10px;
+              }
+          }
     </style>
 </head>
 
