--- a/ResponsiveWebDesign/DesignPrinciples/index.html
+++ b/ResponsiveWebDesign/DesignPrinciples/index.html
@@ -11,11 +11,21 @@
             font-size: 20px;
         }
 
-        @media (max-height: 800px){ 
+        .responsive-img {
+            max-width: 100%;
+            height: auto;
+
+        }
+
+        img {
+            width: 600px;
+        }
+
+        @media (max-height: 800px) {
             p {
-            font-size: 10px;
-              }
-          }
+                font-size: 10px;
+            }
+        }
     </style>
 </head>
 
@@ -24,6 +34,10 @@
         vestibulum cursus, interdum sit amet lectus. Sed sit amet quam nibh. Suspendisse quis tincidunt nulla. In hac
         habitasse platea dictumst. Ut sit amet pretium nisl. Vivamus vel mi sem. Aenean sit amet consectetur sem.
         Suspendisse pretium, purus et gravida consequat, nunc ligula ultricies diam, at aliquet velit libero a dui.</p>
+
+    <img class="responsive-img" src="https://s3.amazonaws.com/freecodecamp/FCCStickerPack.jpg"
+        alt="freeCodeCamp stickers set">
+    <img src="https://s3.amazonaws.com/freecodecamp/FCCStickerPack.jpg" alt="freeCodeCamp stickers set">
 </body>
 
 </html>
