Retina Image for Higher Resolution Displays

--- a/ResponsiveWebDesign/DesignPrinciples/index.html
+++ b/ResponsiveWebDesign/DesignPrinciples/index.html
@@ -10,6 +10,7 @@
         p {
             font-size: 20px;
         }
+        img { height: 100px; width: 100px; }
 
         .responsive-img {
             max-width: 100%;
