--- a/ResponsiveWebDesign/DesignPrinciples/index.html
+++ b/ResponsiveWebDesign/DesignPrinciples/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        h2{ width: 80vw; }
+
         p {
             font-size: 20px;
+            width: 75vmin; 
         }
         img { height: 100px; width: 100px; }
 
@@ -31,6 +34,7 @@
 </head>
 
 <body>
+    <h2>Importantus Ipsum</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis tempus massa. Aenean erat nisl, gravida vel
         vestibulum cursus, interdum sit amet lectus. Sed sit amet quam nibh. Suspendisse quis tincidunt nulla. In hac
         habitasse platea dictumst. Ut sit amet pretium nisl. Vivamus vel mi sem. Aenean sit amet consectetur sem.
